[gd_scene load_steps=40 format=3 uid="uid://cguhwvas7dt18"]

[ext_resource type="Script" path="res://enemies/Scripts/enemy.gd" id="1_4clfc"]
[ext_resource type="Texture2D" uid="uid://crllfptkdptyt" path="res://enemies/Skeleton/Sprite Sheets/Skeleton-sheet.png" id="2_7hijk"]
[ext_resource type="PackedScene" uid="uid://qdby4xo3xo6" path="res://GeneralNodes/HitBox/hit_box.tscn" id="2_a7v85"]
[ext_resource type="PackedScene" uid="uid://dfpr3654pjjnx" path="res://GeneralNodes/HurtBox/hurt_box.tscn" id="2_f8p03"]
[ext_resource type="Script" path="res://enemies/Scripts/States/enemy_state_machine.gd" id="3_rkmfk"]
[ext_resource type="AudioStream" uid="uid://cb3srw8v4vmr6" path="res://enemies/Skeleton/Audio/luuranko 1.mp3" id="4_jwm6u"]
[ext_resource type="Script" path="res://enemies/Scripts/States/enemy_state_idle.gd" id="4_nbeel"]
[ext_resource type="Script" path="res://enemies/Scripts/States/enemy_state_wander.gd" id="5_hjfy5"]
[ext_resource type="AudioStream" uid="uid://bcgqdqr0jn1in" path="res://enemies/Skeleton/Audio/luuranko 2.mp3" id="5_y8gj1"]
[ext_resource type="Script" path="res://enemies/Scripts/States/enemy_state_stun.gd" id="9_aawf4"]
[ext_resource type="Script" path="res://enemies/Scripts/States/enemy_state_destroy.gd" id="11_u00ob"]
[ext_resource type="Script" path="res://enemies/Scripts/drop_data.gd" id="12_i4ghv"]
[ext_resource type="Script" path="res://enemies/Scripts/States/enemy_state_chase.gd" id="12_pdar7"]
[ext_resource type="PackedScene" uid="uid://dv2t5dw8fkvpx" path="res://enemies/vision_area.tscn" id="13_6j2ht"]
[ext_resource type="Script" path="res://enemies/Scripts/States/enemy_state_attack.gd" id="13_bhs0e"]
[ext_resource type="Resource" uid="uid://bkr5cdfm8dmya" path="res://Items/potion.tres" id="13_grtu5"]
[ext_resource type="PackedScene" uid="uid://dw1ppcvwap761" path="res://enemies/AttackArea.tscn" id="14_joq0f"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jiwty"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j3wxy"]
radius = 2.0
height = 10.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_livun"]
radius = 14.0
height = 32.0

[sub_resource type="Animation" id="Animation_o1ga1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, -21)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/HurtBox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(11, -3)]
}

[sub_resource type="Animation" id="Animation_pjx1h"]
resource_name = "attack_down"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [44, 62]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, -21)]
}

[sub_resource type="Animation" id="Animation_1dvbq"]
resource_name = "attack_side"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [44, 62]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, -21)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/HurtBox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(10, -3), Vector2(9, -3), Vector2(-10, -10)]
}

[sub_resource type="Animation" id="Animation_0mvp5"]
resource_name = "attack_up"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [44, 62]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, -21)]
}

[sub_resource type="Animation" id="Animation_gf1jg"]
resource_name = "destroy_down"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.1, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [22, 29, 39]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, -21)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_y8gj1")
}],
"times": PackedFloat32Array(0.433333)
}
tracks/2/use_blend = true
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_jwm6u")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_e47yi"]
resource_name = "destroy_side"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.1, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [22, 29, 39]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, -21)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_y8gj1")
}],
"times": PackedFloat32Array(0.433333)
}
tracks/2/use_blend = true
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_jwm6u")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_fe56e"]
resource_name = "destroy_up"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.1, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [22, 29, 39]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, -21)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_y8gj1")
}],
"times": PackedFloat32Array(0.433333)
}
tracks/2/use_blend = true
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_jwm6u")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_a71hu"]
resource_name = "enemy_react"
length = 0.55
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [40, 43]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, -21)]
}

[sub_resource type="Animation" id="Animation_uorab"]
resource_name = "idle_down"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [23, 28]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, -21)]
}

[sub_resource type="Animation" id="Animation_he3aw"]
resource_name = "idle_side"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [23, 28]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, -21)]
}

[sub_resource type="Animation" id="Animation_5ktuo"]
resource_name = "idle_up"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [23, 28]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, -21)]
}

[sub_resource type="Animation" id="Animation_x7ut0"]
resource_name = "stun_down"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [13, 21]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, -21)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_jwm6u")
}],
"times": PackedFloat32Array(0.0666667)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_uxsos"]
resource_name = "stun_side"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [13, 21]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, -21)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_jwm6u")
}],
"times": PackedFloat32Array(0.0666667)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_ems7b"]
resource_name = "stun_up"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [13, 21]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, -21)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_jwm6u")
}],
"times": PackedFloat32Array(0.0666667)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_sndq7"]
resource_name = "walk_down"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, -21)]
}

[sub_resource type="Animation" id="Animation_vv1qp"]
resource_name = "walk_side"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, -21)]
}

[sub_resource type="Animation" id="Animation_vs84c"]
resource_name = "walk_up"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, -21)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lw6la"]
_data = {
"RESET": SubResource("Animation_o1ga1"),
"attack_down": SubResource("Animation_pjx1h"),
"attack_side": SubResource("Animation_1dvbq"),
"attack_up": SubResource("Animation_0mvp5"),
"destroy_down": SubResource("Animation_gf1jg"),
"destroy_side": SubResource("Animation_e47yi"),
"destroy_up": SubResource("Animation_fe56e"),
"enemy_react": SubResource("Animation_a71hu"),
"idle_down": SubResource("Animation_uorab"),
"idle_side": SubResource("Animation_he3aw"),
"idle_up": SubResource("Animation_5ktuo"),
"stun_down": SubResource("Animation_x7ut0"),
"stun_side": SubResource("Animation_uxsos"),
"stun_up": SubResource("Animation_ems7b"),
"walk_down": SubResource("Animation_sndq7"),
"walk_side": SubResource("Animation_vv1qp"),
"walk_up": SubResource("Animation_vs84c")
}

[sub_resource type="Resource" id="Resource_xv4tk"]
script = ExtResource("12_i4ghv")
item = ExtResource("13_grtu5")
probability = 100.0
min_amount = 1
max_amount = 1

[node name="Skeleton" type="CharacterBody2D"]
position = Vector2(-9, 1)
collision_layer = 256
collision_mask = 16
script = ExtResource("1_4clfc")

[node name="HitBox" parent="." instance=ExtResource("2_a7v85")]
collision_layer = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CapsuleShape2D_jiwty")
debug_color = Color(0.58775, 0.547667, 1.92523e-07, 0.486275)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(9, -21)
texture = ExtResource("2_7hijk")
hframes = 22
vframes = 3
frame = 23

[node name="HurtBox" parent="Sprite2D" instance=ExtResource("2_f8p03")]
position = Vector2(11, -3)
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/HurtBox"]
shape = SubResource("CapsuleShape2D_j3wxy")
debug_color = Color(0.972549, 0, 0.0941176, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_livun")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lw6la")
}
autoplay = "idle_side"

[node name="EnemyStateMachine" type="Node" parent="."]
script = ExtResource("3_rkmfk")

[node name="Idle" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("after_idle_state")]
script = ExtResource("4_nbeel")
after_idle_state = NodePath("../Wander")

[node name="Wander" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("next_state")]
script = ExtResource("5_hjfy5")
state_animation_duration = 1.3
next_state = NodePath("../Idle")

[node name="Stun" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("next_state")]
script = ExtResource("9_aawf4")
next_state = NodePath("../Chase")

[node name="Destroy" type="Node" parent="EnemyStateMachine"]
script = ExtResource("11_u00ob")
drops = Array[ExtResource("12_i4ghv")]([SubResource("Resource_xv4tk")])

[node name="Chase" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("vision_area", "next_state")]
script = ExtResource("12_pdar7")
vision_area = NodePath("../../VisionArea")
next_state = NodePath("../Wander")

[node name="Attack" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("attack_area", "next_state", "hurt_box")]
script = ExtResource("13_bhs0e")
attack_area = NodePath("../../AttackArea")
next_state = NodePath("../Wander")
hurt_box = NodePath("../../Sprite2D/HurtBox")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
max_polyphony = 4

[node name="VisionArea" parent="." instance=ExtResource("13_6j2ht")]
position = Vector2(-1, 4)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="VisionArea"]
position = Vector2(0, -8)
polygon = PackedVector2Array(-8, 0, 8, 0, 70, 100, -70, 100)

[node name="AttackArea" parent="." instance=ExtResource("14_joq0f")]
position = Vector2(-1, 6)

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="AttackArea"]
position = Vector2(1, 9)
scale = Vector2(1.46875, 1)
polygon = PackedVector2Array(-20, 10, -20, -10, 20, -10, 20, 10)
one_way_collision_margin = 20.0
